<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="75dp">

        <TextView
            android:id="@+id/totalAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_amount"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/totalAmountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/_0_00"
            android:inputType="numberSigned|number|numberDecimal"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/taxAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tax_amount"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/taxAmountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/_0_002"
            android:inputType="numberSigned|number|numberDecimal"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tipPercentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/tip_percentage"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp">

        <RadioGroup
            android:id="@+id/percentRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <RadioButton
                android:id="@+id/zeroRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/_0"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/fiveRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/tenRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/twentyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_20"
                android:textSize="20sp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:onClick="calculate"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="CALCULATE" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:onClick="clearForm"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="CLEAR" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/tipAmountTotalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Tip Amount:"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tipAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="$0.00"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp">
        <TextView
            android:id="@+id/grandTotalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Grand Total:"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/grandTotalEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="$0.00"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>